added links to wiktionaries in other languages <leap#645>

--- a/wiki/leap.wikitext
+++ b/wiki/leap.wikitext
@@ -43,13 +43,13 @@
 *Bulgarian: [[скачам]]
 *[[Danish]]: [[spring]], [[springe]]
 *Dutch: [[springen]], [[wippen]]
-*Finnish: [[hypätä]], [[loikata]]
-*French: [[sauter]], [[bondir]]
-*German: [[springen]], [[hüpfen]]
+*Finnish: [[:fi:hypätä|hypätä]], [[:fi:loikata|loikata]]
+*French: [[:fr:sauter|sauter]], [[:fr:bondir|bondir]]
+*German: [[:de:springen|springen]], [[:de:hüpfen|hüpfen]]
 *Gujarati: [[કૂદવું]], [[ઠેકવું]]
-*Hebrew: [[קפץ]]
+*Hebrew: [[:he:קפץ|קפץ]]
 *Indonesian: [[lompat]], [[loncat]], [[lompat|melompat]], [[loncat|meloncat]]
-*Italian: [[saltare]]
+*Italian: [[:it:saltare|saltare]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -59,10 +59,10 @@
 *[[Norwegian]]: [[sprang]], [[hopp]], [[hoppe]]
 *Portuguese: [[saltar]]
 *Romanian: [[a sări]], [[a sălta]]
-*Russian: [[скакать]], [[прыгать]]
+*Russian: [[:ru:скакать|скакать]], [[:ru:прыгать|прыгать]]
 *Slovak: [[skočiť]]/[[skákať]], [[preskočiť]]/[[preskakovať]] ''(over something)''
-*Spanish: [[saltar]]
-*Swedish: [[hoppa]], [[springa]] (''older'')
+*Spanish: [[:es:saltar|saltar]]
+*Swedish: [[:sv:hoppa|hoppa]], [[:sv:springa|springa]] (''older'')
 *Vietnamese: [[nhảy|nhảy (lên)]]
 |}
 |}
@@ -85,22 +85,22 @@
 *[[Breton]]: [[lamm]] ''m'', [[sailh]] ''m'' (1)
 *Bulgarian: [[скок]] ''m'' (1)
 *[[Danish]]: [[spring]] ''n'' (1,2)
-*Finnish: [[hyppy]], [[loikka]] (1,2)
-*French: [[saut]] ''m'', [[bond]] ''m'' (1)
-*German: [[Sprung]] ''m'' (1,2)
+*Finnish: [[:fi:hyppy|hyppy]], [[:fi:loikka|loikka]] (1,2)
+*French: [[:fr:saut|saut]] ''m'', [[:fr:bond|bond]] ''m'' (1)
+*German: [[:de:Sprung|Sprung]] ''m'' (1,2)
 *Gujarati: [[કૂદકો]],[[ઠેકડો]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from J to Z go here-->
-*[[Latin]]: [[saltus]] ''m''
+*[[Latin]]: [[:la:saltus|saltus]] ''m''
 *Polish: [[sus]] ''m'' (1,2)
 *Portuguese: [[salto]] ''m'', [[pulo]] ''m''
-*Russian: [[скачок]], [[прыжок]]
+*Russian: [[:ru:скачок|скачок]], [[:ru:прыжок|прыжок]]
 *Slovak: [[skok]]
-*Spanish: [[salto]]
-*Swedish: [[hopp]] ''n'' (1), [[språng]] ''n'' (1)
+*Spanish: [[:es:salto|salto]]
+*Swedish: [[:sv:hopp|hopp]] ''n'' (1), [[:sv:språng|språng]] ''n'' (1)
 *Vietnamese: [[nhảy|(sự, bước) nhảy]]
 |}
 |}
