--- a/wiki/today.wikitext
+++ b/wiki/today.wikitext
@@ -24,6 +24,7 @@
 *Dutch: [[vandaag]]
 *[[Esperanto]]: [[hodiaŭ]]
 *[[Estonian]]: [[täna]]
+*[[Euskera]]: [[gaur]]
 *{{fi}}: [[tänään]], [[tämä päivä]]
 *French: [[aujourd'hui]]
 *[[Frisian]]: [[hjoed]]
