--- a/wiki/matrix.wikitext
+++ b/wiki/matrix.wikitext
@@ -16,6 +16,7 @@
 *German: Matrix ''f''
 *Italian: [[matrice]] ''f''
 *Polish: [[Macierz]]
+*Portuguese: Matriz
 *{{sk}}: [[matica#Slovak|matica]] ''f''
 *Spanish: [[Matriz]]
 *Swedish: [[matris]]
