I corrected definition number 1 from two to one. <couple#61918>

--- a/wiki/couple.wikitext
+++ b/wiki/couple.wikitext
@@ -4,7 +4,7 @@
 
 '''couple'''
 
-#That which joins or links two things together; a bond or tie; a coupler.
+#Usually referring to one and not two.
 #Two of the same kind connected or considered together; a pair; a brace.
 #A male and female associated together; esp., a man and woman who are married or betrothed.
 #See Couple-close.
@@ -12,8 +12,8 @@
 #Two rotations, movements, etc., which are equal in amount but opposite in direction, and acting along parallel lines or around parallel axes.
 
 ===translation===
-*[[Hebrew]]: [[:he:זוג|זוג]] /zug/ 
-*[[Russian]]: [[:ru:пара|пара]] /para/ 
+*[[Hebrew]]: [[:he:???|???]] /zug/ 
+*[[Russian]]: [[:ru:????|????]] /para/ 
 
 ==[[multilingual associations]]==
-*[[Russian]]: '''couple''' капель /kapel/ (of [[drop]]s)
+*[[Russian]]: '''couple''' ?????? /kapel/ (of [[drop]]s)
