--- a/wiki/godlike.wikitext
+++ b/wiki/godlike.wikitext
@@ -5,4 +5,5 @@
 *Chinese: [[似神]]
 *French: [[divin]] ''m'', [[divine]] ''f''
 *Greek: [[θεϊκός]] ''m'', [[θεϊκή]] ''f'', [[θεϊκό]] ''n''
+*Romanian: [[dumnezeiesc]] ''m'' [[dumnezeiască]] ''f'', [[divin]] ''m'' [[divină]] ''f''
 *Spanish: [[divino]] ''m'', [[divina]] ''f''
