--- a/wiki/almighty.wikitext
+++ b/wiki/almighty.wikitext
@@ -16,3 +16,5 @@ IPA: [[WEAE]] /ɔlˈmaɪt.i/
 ====Related terms====
 *[[might]]
 *[[mighty]]
+====Translations====
+*{{ro}}: atotputernic ''m'', atotputernică ''f''
