--- a/wiki/taste.wikitext
+++ b/wiki/taste.wikitext
@@ -1,2 +1,4 @@
 ==English==
 *One of the sensations produced by the [[tongue]] in response to certain chemicals often confused and/or mixed somewhat with [[smell]]ing.  The primary sensations classified as taste are: [[sweet]], [[sour]], [[bitter]], [[salty]] and [[umami]]
+===Translations===
+*{{ro}}: gust ''n''
