--- a/wiki/sour.wikitext
+++ b/wiki/sour.wikitext
@@ -7,3 +7,4 @@ A [[taste]] sensation associated with [[acid]]s.
 
 ====Translations====
 *Lithuanian: (1) [[rūgštumas]] ''m''; (2): [[rūgštus]] ''m'', [[rūgšti]] ''f'', [[rūgštu]] ''n''
+*{{ro}}: acru
