--- a/wiki/sailor.wikitext
+++ b/wiki/sailor.wikitext
@@ -5,3 +5,5 @@
 '''sailor'''
 
 #One who follows the business of navigating ships or other vessels; one who understands the practical management of ships; one of the crew of a vessel; a mariner; a common seaman.
+====Translations====
+*{{ro}}: [[marinar]], [[matelot]]
