--- a/wiki/matrix.wikitext
+++ b/wiki/matrix.wikitext
@@ -17,6 +17,7 @@
 *Italian: [[matrice]] ''f''
 *Polish: [[Macierz]]
 *Portuguese: Matriz
+*{{ro}}: [[matrice]] ''f''
 *{{sk}}: [[matica#Slovak|matica]] ''f''
 *Spanish: [[Matriz]]
 *Swedish: [[matris]]
