--- a/wiki/crumb.wikitext
+++ b/wiki/crumb.wikitext
@@ -20,6 +20,7 @@ Crumb
 *Greek: [[ψίχουλο]]
 *Japanese: [[パン粉]]
 *Portuguese: [[migalha]] ''f''
+*{{ro}}: [[firimitură]] ''f''
 *Russian: [[:ru:крошка|крошка]] 
 *Spanish: [[miga]] ''f''
 
