--- a/wiki/doughnut.wikitext
+++ b/wiki/doughnut.wikitext
@@ -28,6 +28,7 @@ dough&middot;nut
 <!--Put translations for languages from A to I here-->
 *Finnish: [[donitsi]]
 *French: [[beignet]] ''m''
+*Romanian: [[gogoaşă]] ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
