--- a/wiki/call.wikitext
+++ b/wiki/call.wikitext
@@ -20,7 +20,7 @@
 *Dutch: vragen (1), schreeuwen (2), opbellen (3), bezoeken (4), noemen (5)
 *Finnish: [[kutsua]] (1, 6), [[soittaa]] (puhelimella) (3)
 *Portuguese:[[chamar]] (1, 5), [[gritar]] (2), [[telefonar]] (3), [[visitar]] (5)
-
+*Romanian: [[chema]] (1), [[striga]] (2), [[telefona]], [[suna]] (3), [[vizita]] (5), [[numi]] (6)
 ===Noun===
 '''call'''
 # a telephone conversation
