ro <of course#48400>

--- a/wiki/of_course.wikitext
+++ b/wiki/of_course.wikitext
@@ -23,5 +23,6 @@
 *Japanese: [[当然]] ([[とうぜん]], tōzen)
 *Polish: [[oczywiście]]
 *Portuguese: [[naturalmente, de acordo]]
+*Romanian: [[bineînţeles]], [[sigur]]
 *Spanish: [[por supuesto]]
 *Swedish: [[naturligtvis]]
