--- a/wiki/billiards.wikitext
+++ b/wiki/billiards.wikitext
@@ -13,6 +13,7 @@
 *Italian: [[biliardi]] ''m plural''
 *Japanese: [[ビリヤード]] (biriyādo)
 *Korean: [[당구]]
+*Romanian: [[biliard]]
 *Russian: [[бильярды]] (bil'yardi)
 *Spanish: [[billares]] ''m plural''
 *Portuguese: [[bilhar]] ''m''
