--- a/wiki/rich.wikitext
+++ b/wiki/rich.wikitext
@@ -20,6 +20,7 @@
 *Italian: [[ricco]] ''m'', [[ricca]] ''f''
 *Japanese: [[豊かな]] ([[ゆたかな]])
 * Latin: [[dives]]
+* {{ro}}: [[bogat]] ''m'', [[bogată]] ''f'', [[avut]] ''m'', [[avută]] ''f''
 * {{ru}}: [[богатый]]
 * Spanish: [[rico]] ''m'', [[rica]] ''f''
 German: reich
