--- a/wiki/flour.wikitext
+++ b/wiki/flour.wikitext
@@ -21,6 +21,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Portuguese: [[farinha]] ''f''
+*{{ro}}: [[făină]] ''f''
 *Russian: [[мука|мука́]] ''f''
 *{{sk}}: [[múka#Slovak|múka]] ''f''
 *Spanish: [[harina]] ''f''
