--- a/wiki/kick.wikitext
+++ b/wiki/kick.wikitext
@@ -24,6 +24,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from N to Z go here-->
+*{{ro}}: [[lovi]]
 *Spanish: [[dar]] una [[patada]] [[a]], [[dar]] un [[puntapié]] [[a]], [[patear]]
 |}
 |}
