--- a/wiki/turkey.wikitext
+++ b/wiki/turkey.wikitext
@@ -195,3 +195,7 @@ The translations below need to be checked by native speakers and inserted into t
 *[[Wiktionary:Countries of the world|Wiktionary appendix of countries]]
 
 [[Category:English birds]]
+
+
+[[nl:turkey]]
+[[nl:Turkey]]
