definition replaced <pendant#42774>

--- a/wiki/pendant.wikitext
+++ b/wiki/pendant.wikitext
@@ -1,10 +1,10 @@
 ==English==
+===Homophones===
+*[[pendent]]
 ===Noun===
 '''pendant''' ([[pendants]])
-
-#A symbol used to represent an idea or organization: ''Christians wear a cross as a'' pendant ''of their faith.''
-#A [[necklace]] with an [[ornament]] suspended from it.
-
+*A piece of [[jewellery]] hung from a chain worn around the neck
+*''(British):'' a pennant
 ====Confused with====
 *[[pedant]]
 *[[pennant]], which is a flag
