--- a/wiki/major_league.wikitext
+++ b/wiki/major_league.wikitext
@@ -1,13 +1,11 @@
-=English=
+==English==
 
-==Noun phrase==
-
+===Noun phrase===
 #An association of sports teams which plays at the highest skill level of its sport.
 
-See
+====See also====
 *[[minor league]]
 *[[bush league]]
 
-==Adjective phrase==
-
+===Adjective phrase===
 #Possessing the highest or best quality possible.
