heading levels <minor league#42778>

--- a/wiki/minor_league.wikitext
+++ b/wiki/minor_league.wikitext
@@ -1,12 +1,10 @@
-=English=
+==English==
 
-==Noun phrase==
-
+===Noun phrase===
 #An association of sports teams that plays at a level below the [[major league]]s of a sport.
 
-See:
+====See also====
 *[[bush league]]
 
-==Adjective phrase==
-
+===Adjective phrase===
 #Having a quality less than the best possible.
