--- a/wiki/bush_league.wikitext
+++ b/wiki/bush_league.wikitext
@@ -1,13 +1,11 @@
-=English=
+==English==
 
-==Noun phrase==
-
+===Noun phrase===
 #A professional sports association at the lower levels of [[minor league]] organization.
 
-See:
+====See also====
 * [[major league]]
 
-==Adjective phrase==
-
+===Adjective phrase===
 #Having an inferior quality.
 #Amateurish.
