heading levels <bodka#43447>

--- a/wiki/bodka.wikitext
+++ b/wiki/bodka.wikitext
@@ -1,4 +1,4 @@
-=Slovak=
-==Noun==
+==Slovak==
+===Noun===
 '''bodka''' ''f''
-:[[dot]], [[period]] ''(puctuation)''
+#[[dot]], [[period]] ''(puctuation)''
