heading levels <exactly#48909>

--- a/wiki/exactly.wikitext
+++ b/wiki/exactly.wikitext
@@ -1,6 +1,6 @@
-=English=
-==[[Adverb]]==
+==English==
+===Adverb===
 # Understood without approximation
 
-==Translations==
+===Translations===
 *Finnish: [[täsmälleen]]
