heading levels <machination#49639>

--- a/wiki/machination.wikitext
+++ b/wiki/machination.wikitext
@@ -1,8 +1,8 @@
-=Pronunciation=
+==English==
+===Pronunciation===
 Mek'i'ne'ch'an
-=Noun=
+===Noun===
 # Process or system whereby something happens in a automatic way
-==Example==
-He was cruely persecuted because of the society's cruel ''machinations''.
-=Related=
+#:'''Example:''' He was cruely persecuted because of the society's cruel '''machinations'''.
+===Related words===
 [[Machine]]
