--- a/wiki/Hades.wikitext
+++ b/wiki/Hades.wikitext
@@ -1,1 +1,3 @@
-'''Hades'''(noun),(in Greek mythology)the realm of the dead souls,the good go to the [[Elysian Fields]],the wicked go to [[Tartarus]]
+'''Hades'''(noun)1,(in Greek mythology)the realm of the dead souls,the good go to the [[Elysian Fields]],the wicked go to [[Tartarus]]<P>
+2.The brother of [[Zeus]]  chief judge&god of Hades(1)<P>
+3.in the Septuagint Bible,the [[greek]] translation of [[Sheol]]
