--- a/wiki/elective.wikitext
+++ b/wiki/elective.wikitext
@@ -3,7 +3,7 @@
 '''elective'''
 
 # Optional or open to choice
-#:''He decided to forego elective choose.''
+#:'''Example:''' He decided to forego elective surgery.
 
 ====Related terms====
 *[[elect]]
