--- a/wiki/selective.wikitext
+++ b/wiki/selective.wikitext
@@ -1,4 +1,5 @@
-=Adjective=
-# Rejecting the vast majority of applicants or options
-=Related Words=
+==English==
+===Adjective===
+# By process of choice
+====Related Words====
 [[Select]]
