heading levels <select#49644>

--- a/wiki/select.wikitext
+++ b/wiki/select.wikitext
@@ -1,6 +1,6 @@
-=Verb=
+===Verb===
 '''to select'''
 # To choose a specific choice among various options
 
-==Translations==
+====Translations====
 *{{fi}}: [[valita]]
