--- a/wiki/Sheol.wikitext
+++ b/wiki/Sheol.wikitext
@@ -1,1 +1,1 @@
-In the Old Testament,the realm of dead,the  common grave of mankind,translated '''[[Hell]]'''.[[grave]] or [[pit]] in older english translations of the [[Bible]],notably the Authorised or [[King James Version]]
+'''Sheol'''(noun):In the Old Testament,the realm of dead,the common grave of mankind,translated '''[[Hell]]'''.[[grave]] or [[pit]] in older english translations of the [[Bible]],notably the Authorised or [[King James Version]]
