--- a/wiki/Morpheus.wikitext
+++ b/wiki/Morpheus.wikitext
@@ -3,8 +3,8 @@
 ===Proper noun===
 '''Morpheus'''
 
-# A [[deity]] from the [[Greek]] [[pantheon]]
-# A [[fictional character]] in ''The Sandman''
+# A [[deity]] from the [[Greek]] [[pantheon]],he was the the god of dreams.
+# A [[fictional character]] in [[The Sandman]]
 # A [[fictional character]] in ''The Matrix''
 # A [[fictional character]] in ''Little Nemo''
 # A [[file sharing]] [[computer program]] from [[StreamCast]]
