/* Proper noun */ <Morpheus#58848>

--- a/wiki/Morpheus.wikitext
+++ b/wiki/Morpheus.wikitext
@@ -4,7 +4,7 @@
 '''Morpheus'''
 
 # A [[deity]] from the [[Greek]] [[pantheon]],he was the the god of dreams.
-# A [[fictional character]] in [[The Sandman]]
+# A [[fictional character]] in ''The Sandman''
 # A [[fictional character]] in ''The Matrix''
 # A [[fictional character]] in ''Little Nemo''
 # A [[file sharing]] [[computer program]] from [[StreamCast]]
