link fixed <polyandry#53545>

--- a/wiki/polyandry.wikitext
+++ b/wiki/polyandry.wikitext
@@ -10,5 +10,5 @@ The having of a plurality of husbands at the same time; usually, the marriage of
 * [[concubines]]
 * [[seraglio]]
 
-* [[en:Harem|Wikipedia article on harems]]
-* [[en:Seraglio|Wikipedia article on seraglios]]
+* [[w:Harem|Wikipedia article on harems]]
+* [[w:Seraglio|Wikipedia article on seraglios]]
