has anyone heard of more synonyms? <mountain lion#38262>

--- a/wiki/mountain_lion.wikitext
+++ b/wiki/mountain_lion.wikitext
@@ -1,7 +1,32 @@
+=English=
+
+==Etymology==
+
+[[mountain]] the animal's habitat + [[lion]] an African cat of similar size and color
+
 ===Noun===
 '''mountain lion'''
 
-# large wild cat native to North America.
+# A large wild [[cat]] native to the Americas, ''[[Felis]] concolor''.
+
+====Synonyms====
+
+* [[puma]]
+* [[cougar]]
+* [[painter]]
+* [[painted cat]]
+* [[mountain ghost]]
+* [[Indian ghost]]
+* [[American lion]]
+
+====See Also====
+
+* [[catamount]] (can refer to the mountain lion)
+* [[catamountain]] (can refer to the mountain lion)
+* [[panther]] (can refer to the mountain lion)
+* [[Florida panther]] (a subspecies of mountain lion)
+* [[w:puma| Wikipedia article on the mountain lion]]
+
 
 ====Translations====
 *[[Chumash]] (Inezeño): [[tukʼeʼm]]
