/* English */  corrected anatomical def <colon#2366>

--- a/wiki/colon.wikitext
+++ b/wiki/colon.wikitext
@@ -4,10 +4,15 @@
 
 <!-- I'm sure the order here is wrong. Somebody rearrange this after proper checks please -->
 #(''Grammar'') The [[punctuation]] [[mark]] "''':'''" introducing a quotation or a series of items, or separating clauses.
-#(''Anatomy'') The final [[tract]] of [[digestive]] system, from the [[ileum]] to the [[anus]].
+#(''Anatomy'') The final [[segment]] of the [[digestive]] system, after ([[distal]] to) the [[ileum]] and before ([[proximal]] to) the [[anus]]
 
 ====Synonyms====
-*[[bowel]]<!-- perhaps not in a technical sense but in Aus we say "bowel" in all the cases I hear "colon" on US TV -->
+* [[large intestine]]
+* [[large bowel]] (archaic)
+
+====See also====
+* [[bowel]]
+* [[rectum]]
 
 ====Translations====
 *Bulgarian: [[двоеточие]] ''n'' (1), [[колон]] ''m'' (2)
