--- a/wiki/bowel.wikitext
+++ b/wiki/bowel.wikitext
@@ -1,14 +1,21 @@
 ==English==
+
 ===Noun===
 '''bowel''' (''plural'': [[bowels]])
 
-# The intestine. Often used in the plural. 
-# A part or division of the intestine eg. the large bowel. 
-# bowels: ''plural'' the ([[deep]]) interior of something eg. in the bowels of the ship. 
-# bowels: ''Archaic'' The seat of pity or the gentler emotions. 
+# The [[intestinal tract]]. Often used in the plural. 
+# A part or division of the intestinal tract, usually the [[large intestine]]. 
+# bowels: ''plural'' the ([[deep]]) interior of something 
+#: ''Slaves were manacled in the bowels of the ship.''
+# bowels: ''Archaic'' The seat of [[pity]] or the gentler emotions. 
 
 ====Translations====
 * Dutch: [[ingewande]]
 * Spanish: [[tripa]]
 
 ===See also===
+
+* [[large bowel]]
+* [[small bowel]]
+* [[small intestine]]
+* [[colon]]
