interwiki +pl <possum#58085>

--- a/wiki/possum.wikitext
+++ b/wiki/possum.wikitext
@@ -25,3 +25,5 @@
 *[[subesse]]
 *[[superesse]]
 <!-- add see also: opossum (don't think its related), possum is an old term of endearment in aus too -->
+
+[[pl:possum]]
