--- a/wiki/Nationalgericht.wikitext
+++ b/wiki/Nationalgericht.wikitext
@@ -2,4 +2,4 @@
 ===Noun===
 '''Nationalgericht''' ''nt''
 
-#[[National dish]] (''food'')
+# [[National]] [[dish]]; a [[food]] characteristic of a certain [[country]].
