/* Koan practice */ <zen#647647>

--- a/wiki/zen.wikitext
+++ b/wiki/zen.wikitext
@@ -67,6 +67,8 @@ In Soto, [[shikantaza]] meditation, sometimes translated as "just-sitting," i.e.
 ===Koan practice===
 The Zen schools (especially but not exclusively Rinzai) are associated with [[koan|koans]] (Japanese; Chinese: gongan; Korean: gong'an). The term originally referred to legal cases in [[Tang Dynasty|Tang-dynasty]] China. In some sense, a koan embodies a realized principle, or law of reality. Koans often appear paradoxical but are not meant to be apprehended rationally. Rather, Zen practitioners are said to recognize and actualize a koan in experience. An example of a Zen koan: "Two hands clap and there is a sound. What is the sound of one hand?". It's sometimes said that after diligent practice, the practitioner and the koan become one.
 
+Koans are by design absolute nonsense in an effort to exhaust the intellect. Once the intellect is no longer relied upon, then enlightenment is more readily recieved or apprehended. This is contradictory to the Soto sect's more passive methods of meditation integrated in everyday daily tasks. Rinzai is basically a brute-force method. The principle in more detail, is that the only way one can stop the intellect from getting in the way of achieving enlightment is to force it to consider impossible scenarios (the Koans) until it finally realizes the futilty and gives up entirely. Once the intellect is out of the way, enlightenment is more readily attained. Thus in Rinzai, enlightment usually is achieved after many years of training until one's mind is "ripe" enough for a sudden realization (enlightenment).
+
 =="Zen" in Western pop-culture==
 
 Many modern students have made the mistake of thinking that since much of Zen sounds like nonsense, especially in translation and out of context, any clever nonsense is also Zen. This is not the case, but see [[Discordianism]] and the [[Church of the SubGenius]] for modern semiserious religions influenced by this idea.
