/* Proper Noun */ <Roma#1005413>

--- a/wiki/Roma.wikitext
+++ b/wiki/Roma.wikitext
@@ -3,8 +3,8 @@
 ===Proper Noun===
 '''Roma'''
 
-# A nation believed to have originated in India and now found throughout Europe, particularly Eastern Europe; otherwise known as [[Gypsy|Gypsies]].
-# A variety of tomato.
+# A [[people]] believed to have originated in India and now found throughout Europe, particularly Eastern Europe; the people known as [[Gypsy|Gypsies]].
+# A [[variety]] of [[tomato]].
 
 ===Related Terms===
 *[[Rom]]
