/* Noun */ + def; linked 2 terms <capitalization#61377>

--- a/wiki/capitalization.wikitext
+++ b/wiki/capitalization.wikitext
@@ -4,4 +4,5 @@
 
 '''capitalization'''
 
-#The act or process of capitalizing.
+#The act or process of [[capitalizing]].
+#The state of being [[capitalized]].
