--- a/wiki/zen.wikitext
+++ b/wiki/zen.wikitext
@@ -69,7 +69,7 @@ The Zen schools (especially but not exclusively Rinzai) are associated with [[ko
 
 Koans are by design absolute nonsense in an effort to exhaust the intellect. Once the intellect is no longer relied upon, then enlightenment is more readily received or apprehended. This is contradictory to the Soto sect's more passive methods of meditation integrated into everyday daily tasks. Rinzai is basically a brute-force method. The principle in more detail, is that the only way one can stop the intellect from getting in the way of achieving enlightment is to force it to consider impossible scenarios (the koans) until it finally realizes the futility and gives up entirely. Once the intellect is out of the way, enlightenment is more readily attained. Thus in Rinzai, enlightenment usually is achieved after many years of training until one's mind is "ripe" enough for a sudden realization (enlightenment). 
 
-The Zen student's mastery of a given koan is presented to the teacher (Roshi) in a private session called "Kensho". The answer to a koan is more dependent upon "how" it is answered rather than the correctness of the answer. That is, there is no "one correct answer" for any given koan. The way the koan is answered is the primary window the Roshi can use to judge how ripe a student's mind is, and if he is ready for the next assigned koan. Ultimately during one of these sessions, the Roshi decides if the student has achieved elightenment or not.
+The Zen student's mastery of a given koan is presented to the teacher (Roshi) in a private session called "Kensho". The answer to a koan is more dependent upon "how" it is answered rather than the correctness of the answer. That is, there is no "one correct answer" for any given koan. The way the koan is answered is the primary window the Roshi can use to judge how ripe a student's mind is, and if he is ready for the next assigned koan. Ultimately during one of these sessions, the Roshi decides if the student has achieved enlightenment or not.
 
 =="Zen" in Western pop-culture==
 
