--- a/wiki/year_dot.wikitext
+++ b/wiki/year_dot.wikitext
@@ -1,5 +1,9 @@
 {{vfd}}
 
-An old-fashioned expression meaning the zeroth or first year, or a very long time ago, or possibly representing the point between AD[[1]] and [[1 BC]], as there is no [[Year 0]] As in "That hat dates from the year dot."
+An old-fashioned expression meaning a very long time ago.
+
+"Since the year dot" can mean "from the begining". 
+
+The phrase may originate from a represntation of  the zeroth or first year, or the point between AD[[1]] and [[1 BC]], as there is no [[Year 0]] As in "That hat dates from the year dot."
 
 {{Stub}}
