--- a/wiki/zen.wikitext
+++ b/wiki/zen.wikitext
@@ -67,9 +67,13 @@ In Soto, [[shikantaza]] meditation, sometimes translated as "just-sitting," i.e.
 ===Koan practice===
 The Zen schools (especially but not exclusively Rinzai) are associated with [[koan|koans]] (Japanese; Chinese: gongan; Korean: gong'an). The term originally referred to legal cases in [[Tang Dynasty|Tang-dynasty]] China. In some sense, a koan embodies a realized principle, or law of reality. Koans often appear paradoxical but are not meant to be apprehended rationally. Rather, Zen practitioners are said to recognize and actualize a koan in experience. An example of a Zen koan: "Two hands clap and there is a sound. What is the sound of one hand?". It's sometimes said that after diligent practice, the practitioner and the koan become one.
 
-Koans are by design absolute nonsense in an effort to exhaust the intellect. Once the intellect is no longer relied upon, then enlightenment is more readily received or apprehended. This is contradictory to the Soto sect's more passive methods of meditation integrated into everyday daily tasks. Rinzai is basically a brute-force method. The principle in more detail, is that the only way one can stop the intellect from getting in the way of achieving enlightment is to force it to consider impossible scenarios (the koans) until it finally realizes the futility and gives up entirely. Once the intellect is out of the way, enlightenment is more readily attained. Thus in Rinzai, enlightenment usually is achieved after many years of training until one's mind is "ripe" enough for a sudden realization (enlightenment). 
+According to some interpretations, Koans are by design absolute nonsense in an effort to exhaust the intellect. Once the intellect is no longer relied upon, then enlightenment is more readily received or apprehended. However, other accounts hold that the problem posed by a koan is quite serious, and there there is a sharp distinction between right and wrong answers to it.
 
-The Zen student's mastery of a given koan is presented to the teacher (Roshi) in a private session called "Kensho". The answer to a koan is more dependent upon "how" it is answered rather than the correctness of the answer. That is, there is no "one correct answer" for any given koan. The way the koan is answered is the primary window the Roshi can use to judge how ripe a student's mind is, and if he is ready for the next assigned koan. Ultimately during one of these sessions, the Roshi decides if the student has achieved enlightenment or not.
+The principle in more detail, is that the only way one can stop the intellect from getting in the way of achieving enlightment is to force it to consider impossible scenarios (the koans) until it finally realizes the futility and gives up entirely. Once the intellect is out of the way, enlightenment is more readily attained. Thus, though Rinzai aims for a "sudden" enlightenment, this usually only comes after a great deal of preparation.
+
+The Zen student's mastery of a given koan is presented to the teacher (Roshi) in a private session called "Kensho". The answer to a koan is more dependent on "how" it is answered rather than the correctness of the answer. Or, to put it somewhat differently, the answer is a function not merely of a reply, but of a whole modification of the student's experience; he or she must ''live'' the answer to the koan rather than merely offering a correct statement.
+
+There is no single correct answer for any given koan, though there may be a set of correct and a set of incorrect answers, and indeed students in a cheating mindset would often compile books of accepted answers to Koans to help prepare for the interview; these collections are of great value to modern scholarship on the subject.
 
 =="Zen" in Western pop-culture==
 
