/* Koan practice */ gram <zen#647647>

--- a/wiki/zen.wikitext
+++ b/wiki/zen.wikitext
@@ -69,7 +69,7 @@ The Zen schools (especially but not exclusively Rinzai) are associated with [[ko
 
 According to some interpretations, Koans are by design absolute nonsense in an effort to exhaust the intellect. Once the intellect is no longer relied upon, then enlightenment is more readily received or apprehended. However, other accounts hold that the problem posed by a koan is quite serious, and there there is a sharp distinction between right and wrong answers to it.
 
-The principle in more detail, is that the only way one can stop the intellect from getting in the way of achieving enlightment is to force it to consider impossible scenarios (the koans) until it finally realizes the futility and gives up entirely. Once the intellect is out of the way, enlightenment is more readily attained. Thus, though Rinzai aims for a "sudden" enlightenment, this usually only comes after a great deal of preparation.
+The principle in more detail, is that the only way one can stop the intellect from getting in the way of achieving enlightment is to force it to consider impossible scenarios (the koans) until it finally realizes the futility and gives up entirely. Once the intellect is out of the way, enlightenment is more readily attained. Though Rinzai aims for a "sudden" enlightenment, this usually only comes after a great deal of preparation.
 
 The Zen student's mastery of a given koan is presented to the teacher (Roshi) in a private session called "Kensho". The answer to a koan is more dependent on "how" it is answered rather than the correctness of the answer. Or, to put it somewhat differently, the answer is a function not merely of a reply, but of a whole modification of the student's experience; he or she must ''live'' the answer to the koan rather than merely offering a correct statement.
 
