/* Koan practice */ grammar <zen#647647>

--- a/wiki/zen.wikitext
+++ b/wiki/zen.wikitext
@@ -67,7 +67,7 @@ In Soto, [[shikantaza]] meditation, sometimes translated as "just-sitting," i.e.
 ===Koan practice===
 The Zen schools (especially but not exclusively Rinzai) are associated with [[koan|koans]] (Japanese; Chinese: gongan; Korean: gong'an). The term originally referred to legal cases in [[Tang Dynasty|Tang-dynasty]] China. In some sense, a koan embodies a realized principle, or law of reality. Koans often appear paradoxical but are not meant to be apprehended rationally. Rather, Zen practitioners are said to recognize and actualize a koan in experience. An example of a Zen koan: "Two hands clap and there is a sound. What is the sound of one hand?". It's sometimes said that after diligent practice, the practitioner and the koan become one.
 
-According to some interpretations, Koans are by design absolute nonsense in an effort to exhaust the intellect. Once the intellect is no longer relied upon, then enlightenment is more readily received or apprehended. However, other accounts hold that the problem posed by a koan is quite serious, and there there is a sharp distinction between right and wrong answers to it.
+According to some interpretations koans are by design absolute nonsense. This is in an effort to exhaust the intellect. Once the intellect is no longer relied upon, then enlightenment is more readily received or apprehended. However, other accounts hold that the problem posed by a koan is quite serious, and there there is a sharp distinction between right and wrong answers to it.
 
 The principle in more detail, is that the only way one can stop the intellect from getting in the way of achieving enlightment is to force it to consider impossible scenarios (the koans) until it finally realizes the futility and gives up entirely. Once the intellect is out of the way, enlightenment is more readily attained. Though Rinzai aims for a "sudden" enlightenment, this usually only comes after a great deal of preparation.
 
