--- a/wiki/Gerippe.wikitext
+++ b/wiki/Gerippe.wikitext
@@ -3,4 +3,4 @@
 
 '''Gerippe''' (''plural'' '''Gerippes''')
 
-#A structural system of [[bone]]s in [[vertibrates]], '''skeleton'''
+#A structural system of [[bone]]s in [[vertibrates]], '''[[skeleton]]'''
