--- a/wiki/concord.wikitext
+++ b/wiki/concord.wikitext
@@ -3,7 +3,7 @@
 with stress on first syllable
 ===Etymology 1===
 French ''[[concorde]]'', Latin ''[[concordia]]'', from ''[[concors]]'' of the same mind, agreeing; ''[[con-]]'' + ''[[cor]]'', cordis, heart. See [[heart]], and compare [[accord]]
-====Noun===
+====Noun====
 #A state of agreement; harmony; union.
 #*Love quarrels oft in pleasing '''concord''' end. - [[John Milton]]
 #''(Obsolete):'' Agreement by stipulation; compact; covenant; treaty or league
@@ -12,7 +12,7 @@ French ''[[concorde]]'', Latin ''[[concordia]]'', from ''[[concors]]'' of the sa
 #''(Old Law):'' An agreement between the parties to a fine of land in reference to the manner in which it should pass, being an acknowledgment that the land in question belonged to the complainant. See [[fine]]. - [[Burril?]]
 #''(Probably influenced by [[chord]]), (Music):'' An agreeable combination of tones simultaneously heard; a consonant chord; consonance; harmony.
 ===Etymology 2===
-====Noun===
+====Noun====
 #A variety of American [[grape]], with large dark blue (almost black) grapes in compact clusters.
 ===Pronunciation===
 Stressed on second syllable
