--- a/wiki/hegemony.wikitext
+++ b/wiki/hegemony.wikitext
@@ -1,1 +1,4 @@
-the domination of one state over its allies
+Domination, Supremacy of one state over its allies.
+
+It use has been extended to express that kind of influence and control
+eg:  internationally among nation-states, social classes, between languages and even Culture.
