--- a/wiki/%E9%AD%85.wikitext
+++ b/wiki/%E9%AD%85.wikitext
@@ -10,11 +10,13 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': kind of forest demon, elf
+* '''Common Meaning''': 
+*#kind of forest demon, elf
+*#[[fascination]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -26,15 +28,25 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': mei6
 
+===Compounds===
+*[[魅惑]]
+*[[魅力]]
+*[[魅人]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[み]] (mi), [[び]] (bi)
 ** '''[[Kun]]''': [[もののけ]] (mononoke), [[ばけもの]] (bakemono), [[すだま]] (sudama)
+
+===Compounds===
+*[[魅了]]
+*[[魅力]]
+*[[魅惑]]
 
 * '''Other info''':  
 
