--- a/wiki/cwm.wikitext
+++ b/wiki/cwm.wikitext
@@ -3,7 +3,7 @@
 Welsh
 
 ===Noun===
-'''cwm''' (''plural'' '''cwms''')
+'''cwm''' (''plural'' '''cwms''')  Pronounced "Coom"
 
 #A steep, [[bowl]]-shaped [[hollow]] in a [[hill]] or [[mountain]].
 
@@ -11,6 +11,7 @@ Welsh
 *[[corrie]], [[cirque]]
 
 ----
+
 ==Welsh==
 ===Noun===
 '''cwm'''
