--- a/wiki/proper.wikitext
+++ b/wiki/proper.wikitext
@@ -1,4 +1,7 @@
-===Noun===
+==English===
+===Etymology===
+Latin ''[[proprius]]''
+===Adjective===
 '''proper'''
 
 # [[neat]]
@@ -7,9 +10,9 @@
 ====Translation====
 
 *Dutch: [[keurig]] (1), [[goed]], [[juist]] (2), [[recht]]
-*French: [[convenable]], [[exact]], [[juste]]
+*French: [[convenable]], [[exact]], [[juste]], [[propre]]
 *German: [[angemessen]], [[geeignet]], [[passend]], [[richtig]]
-*Italian: [[decente]]
+*Italian: [[decente]], [[proprio]]
 *[[Romanica]]: [[conveniente]], [[exacto]], [[justo]], [[precisso]]
 *Spanish: [[conveniente]], [[preciso]]
 
