--- a/wiki/%E8%88%9E.wikitext
+++ b/wiki/%E8%88%9E.wikitext
@@ -28,6 +28,31 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': mou5
 
+===Compounds===
+*[[舞伴]], [[舞伴儿]]
+*[[舞弊]]
+*[[舞步]]
+*[[舞场]]
+*[[舞池]]
+*[[舞蹈]]
+*[[舞动]]
+*[[舞会]]
+*[[舞技]]
+*[[舞剧]]
+*[[舞客]]
+*[[舞美]]
+*[[舞迷]]
+*[[舞弄]]
+*[[舞女]]
+*[[舞曲]]
+*[[舞台]]
+*[[舞坛]]
+*[[舞厅]]
+*[[舞文弄墨]]
+*[[舞榭歌台]]
+*[[舞艺]]
+*[[舞姿]]
+
 * '''Other info''': 
 
 ----
@@ -38,8 +63,16 @@
 ** '''[[On]]''': [[ぶ]] (bu), [[む]] (mu)
 ** '''[[Kun]]''': [[まう]] (mau), [[まい]] (mai)
 
-* '''Compounds''':
-** [[歌舞伎]] (かぶき, kabuki): [[kabuki]]
+===Compounds===
+*[[舞衣]]
+*[[舞楽]]
+*[[舞姫]]
+*[[舞台]]
+*[[舞踏]]
+*[[舞踊]]
+*[[舞妓]]
+*[[舞い戻る]]
+* [[歌舞伎]] (かぶき, kabuki): [[kabuki]]
 
 * '''Other info''':  
 
