--- a/wiki/%E7%A2%A7.wikitext
+++ b/wiki/%E7%A2%A7.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#jade
-*# green, blue
+*# [[jade]]
+*# [[green]], [[blue]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,11 +29,24 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': bik1
 
+===Compounds===
+*[[碧波]]
+*[[碧澄]]
+*[[碧海]]
+*[[碧空]]
+*[[碧蓝]]
+*[[碧绿]]
+*[[碧螺春]]
+*[[碧桃]]
+*[[碧血]]
+*[[碧油油]], [[碧油油的]]
+*[[碧玉]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[へき]] (heki), [[ひゃく]] (hyaku)
