--- a/wiki/esse.wikitext
+++ b/wiki/esse.wikitext
@@ -2,6 +2,6 @@
 ===Verb===
 '''esse'''
 
-#present active infinitive of [[sum]], to [[be]].
+#present active infinitive of [[sum]]; to [[be]].
 ====Translations====
 *English: "to [[be]]"
