--- a/wiki/%E5%92%8C%E8%A3%BD%E8%8B%B1%E8%AA%9E.wikitext
+++ b/wiki/%E5%92%8C%E8%A3%BD%E8%8B%B1%E8%AA%9E.wikitext
@@ -1,4 +1,5 @@
 '''''Wasei-eigo''''' (&#21644;&#35069;&#33521;&#35486; ''wasei eigo'', lit. "Made-in-Japan English") refers to [[English language|English]] constructions not in use in [[Anglophone]] countries nor by Anglophones, but only by speakers of [[Japanese language|Japanese]].
+A more general term for made-in-Japan foreign words is ''wasei-[[gairaigo]]'', which usually apply to words made from European languages.
 
 One example is the word ''desk'' (&#12487;&#12473;&#12463;: ''desuku''). It seems like perfectly good English, but in Japan, it is a title for a person. ''Tanaka-desk'' would be a reporter or editor in charge of a department at a newspaper (for example, the city desk). Similarly, ''mansion'' ([[:ja:&#12510;&#12531;&#12471;&#12519;&#12531;]]: ''manshon'') refers not to a mansion, but an apartment. Wasei-eigo words can form compounds with Japanese words, for example, ''okushon'' (&#20740;&#12471;&#12519;&#12531;) combines ''oku'', meaning hundred million, with "mansion" to form a new word meaning "luxury apartment". Sometimes, two English words with their normal meanings will be combined to form a new compound word. One famous instance is ''famicom'' (&#12501;&#12449;&#12511;&#12467;&#12531;: ''famikon'' or [[:ja:&#12501;&#12449;&#12511;&#12522;&#12540;&#12467;&#12531;&#12500;&#12517;&#12540;&#12479;]]: ''family computer''), a [[portmanteau]] of "family" and "computer", meaning a [[video game]] system (especially, but not necessarily, ''the'' [[Famicom]], known to the rest of the world as the [[Nintendo Entertainment System]]).
 
