--- a/wiki/sum.wikitext
+++ b/wiki/sum.wikitext
@@ -26,7 +26,8 @@
 
 ----
 
-==Latin==
+=={la}==
+[[Category:Latin language]]
 ===Verb===
 '''sum''', infinitive '''[[esse]]''', perfect '''[[fui]]''', perfect passive participle '''[[futurus]]'''
 
