--- a/wiki/melissa.wikitext
+++ b/wiki/melissa.wikitext
@@ -3,10 +3,13 @@
 '''Melissa'''
 # A female [[given name]].
 
+===See also===
+*[[w:melissa]]
+
 ----
 
 ==Italian==
 ===Noun===
 '''melissa''' ''f''
 
-# a plant
+# a plant in [[Lamiaceae]]
