--- a/wiki/hello.wikitext
+++ b/wiki/hello.wikitext
@@ -19,7 +19,7 @@
 *Arabic: [[مرحبا]]
 *Albanian: [[tungjatjeta]]
 *[[Basque]]: [[kaixo]]
-*Bosnian: [[Merhaba]], [[Halo]]
+*Bosnian: [[Merhaba]] (1), Selam (Alejkum) (1),[[Halo]] (2)
 *Bulgarian: [[здравей]], [[здравейте]] (1), [[ало]] (2)
 *[[Catalan]]: [[hola]] (1), [[digui]] (2)
 *Chinese: [[你好]] (nǐhǎo), [[您好]] (nínhǎo), [[喂]] (wèi), [[幸会]] (xìnghùi)
