--- a/wiki/hi.wikitext
+++ b/wiki/hi.wikitext
@@ -7,6 +7,7 @@
 
 === Translations ===
 *[[Arabic]]: [[مرحبا]]
+*Bosnian: [[Merhaba]], [[Ciao|Ćao]]
 *[[Bulgarian]]: [[ало]], [[здравей]]!
 *[[Chinese]]: [[喂]]
 *[[Croatian]]: [[halo]], [[bok]]
