--- a/wiki/goodbye.wikitext
+++ b/wiki/goodbye.wikitext
@@ -19,6 +19,7 @@ From Middle English for "God be with ye(=you)".
 === Translations ===
 *Arabic: [[مع سلامة]] (Ma Salama)
 *Basque: [[agur]]
+*Bosnian: [[Alahimanet]]
 *Bulgarian: [[добър]], [[хубав]], [[значителен]], [[добро]], [[благо]]
 *Catalan: [[adeu]]
 *Chinese: [[再见]]
