--- a/wiki/%E4%B8%9C.wikitext
+++ b/wiki/%E4%B8%9C.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': east, eastern, eastward
+* '''Common Meaning''': [[east]], [[eastern]], [[eastward]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]:
@@ -30,6 +30,55 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[東]]
+
+===Compounds===
+*[[东半球]]
+*[[东北]]
+*[[东奔西跑]]
+*[[东边]], [[东边儿]]
+*[[东部]]
+*[[东窗事发]]
+*[[东床]]
+*[[东倒西歪]]
+*[[东道]]
+*[[东道主]]
+*[[东渡]]
+*[[东方]]
+*[[东非]]
+*[[东风]]
+*[[东风吹马耳]]
+*[[东宫]]
+*[[东家]]
+*[[东京]]
+*[[东经]]
+*[[东拉西扯]]
+*[[东鳞西爪]]
+*[[东盟]]
+*[[东面]], [[东面儿]]
+*[[东南]]
+*[[东南亚]]
+*[[东挪西借]]
+*[[东欧]]
+*[[东跑西颠]]
+*[[东拼西凑]]
+*[[东坡肉]]
+*[[东三省]]
+*[[东山再起]]
+*[[东施效颦]]
+*[[东逃西窜]]
+*[[东涂西抹]]
+*[[东西]]
+*[[东…西…]]
+*[[东厢房]]
+*[[东乡族]]
+*[[东亚]]
+*[[东洋]]
+*[[东洋车]]
+*[[东摇西摆]]
+*[[东一榔头，西一棒子]]
+*[[东瀛]]
+*[[东张西望]]
+*[[东正教]]
 
 * '''Other info''': 
 
