Standardizing Hebrew letters <aleph#59925>

--- a/wiki/aleph.wikitext
+++ b/wiki/aleph.wikitext
@@ -1,7 +1,10 @@
 ==English==
 
+*Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1488;
+**Next: [[beth|&#1489;]]
+
 ===Noun===
 
 '''aleph'''
 
-#The first letter of the Hebrew alphabet.
+# The first letter of the Hebrew alphabet.
