--- a/wiki/%E4%B8%A2.wikitext
+++ b/wiki/%E4%B8%A2.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': discard
+* '''Common Meaning''': [[discard]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]:
@@ -31,14 +31,38 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[丟]]
 
+===Compounds===
+*[[丢不开]]
+*[[丢不下]]
+*[[丢丑]]
+*[[丢到脑后]]
+*[[丢掉]]
+*[[丢份]], [[丢份儿]]
+*[[丢官]]
+*[[丢魂落魄]]
+*[[丢开]]
+*[[丢盔卸甲]]
+*[[丢脸]]
+*[[丢面子]]
+*[[丢弃]]
+*[[丢却]]
+*[[丢人]]
+*[[丢三落四]]
+*[[丢失]]
+*[[丢手]]
+*[[丢下]]
+*[[丢眼色]]
+*[[丢置]]
+*[[丢卒保车]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
-** '''[[On]]''': [[ちゅう]] (chū), [[ちゅ]] (cfu)
+** '''[[On]]''': [[ちゅう]] (chū), [[ちゅ]] (chu)
 ** '''[[Kun]]''': [[さる]] (saru), [[なげうつ]] (nageutsu)
 
 * '''Other info''':  
