--- a/wiki/%E4%B8%A2.wikitext
+++ b/wiki/%E4%B8%A2.wikitext
@@ -1,6 +1,6 @@
 * '''Alternate form''': [[丟]]
 
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 一|一]]+5
+* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 丿|丿]]+5
 
 * '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 6|6]]
 
