--- a/wiki/%E6%9A%96.wikitext
+++ b/wiki/%E6%9A%96.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': warm, genial
+* '''Common Meaning''': [[warm]], [[genial]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -28,11 +28,26 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': nyun5
 
+===Compounds===
+*[[暖房]]
+*[[暖烘烘]], [[暖烘烘的]]
+*[[暖呼呼]], [[暖呼呼的]]
+*[[暖壶]]
+*[[暖和]]
+*[[暖帘]]
+*[[暖流]]
+*[[暖瓶]]
+*[[暖气]]
+*[[暖融融]], [[暖融融的]]
+*[[暖色]]
+*[[暖水瓶]]
+*[[暖洋洋]], [[暖洋洋的]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[だん]] (dan), [[けん]] (ken), [[のん]] (non)
