/* Related terms */  Added 'real estate' <royal#48631>

--- a/wiki/royal.wikitext
+++ b/wiki/royal.wikitext
@@ -39,6 +39,7 @@ From French '''royal''', from Latin '''[[regalis]]''', ''royal'', ''[[regal]]'',
 *[[royalty]]
 *[[royal we]]
 *[[royal wedding]]
+*[[Real_estate|real estate]]
 
 ====See also====
 *[[emperor]]
