Standardizing Hebrew letters <he#5747>

--- a/wiki/he.wikitext
+++ b/wiki/he.wikitext
@@ -62,6 +62,19 @@ The third person singular, masculine, nominative case. (''Accusative'': [[him]],
 *[[!Xũ]]: [[ha#!Xũ|ha]] (''both male and female'')
 *[[Yoruba]]: [[ó]], [[á]] (''both male and female'')
 
+===Pronunciation===
+* [[w:IPA|IPA]]: /heɪ:/
+* [[w:SAMPA|SAMPA]]: /he:/
+----
+* Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1492;
+** Last: [[Daleth|&#1491;]]
+** Next: [[Vav|&#1493;]]
+
+===Noun===
+'''he'''
+
+# The fifth letter of the Hebrew alphabet.
+
 ----
 
 ==Dutch==
