--- a/wiki/Gimel.wikitext
+++ b/wiki/Gimel.wikitext
@@ -9,3 +9,11 @@
 '''gimel'''
 
 # The third letter of the Hebrew alphabet.
+
+===Proper Noun===
+'''Gimel'''
+
+# Swiss comune
+
+===See also===
+*[[w:Gimel]]
