Added partial English etymology <real estate#34191>

--- a/wiki/real_estate.wikitext
+++ b/wiki/real_estate.wikitext
@@ -1,8 +1,19 @@
+==English==
 ===Noun===
 '''real estate'''
 
 # property that cannot easily be moved, usually [[building]]s and the [[ground]] they are built on
 
-===Translations===
+===Etymology===
+'''real'''; from French '''royale''', from Latin '''[[regalis]]''', ''royal'', ''[[regal]]'', from combining form '''[[reg-]]''' (nominative '''[[rex]]'''), ''[[king]]'', + adjective suffix '''[[-alis]]'''
+
+'''estate'''; (please insert etymology here)
+
+====Origin====
+Under the [[feudalism|feudal]] system, introduced to [http://en.wikipedia.org/wiki/England England] by the [http://en.wikipedia.org/wiki/Normandy Normans] in the [http://en.wikipedia.org/wiki/11th_century 11th century], all land [[Grant|grants]] originated with the [[king]]. The term '''real estate''', evolved from the [http://en.wikipedia.org/wiki/French_language French] '''royal'''.
+
+'''Real estate''' does not, etymologically, have anything to do with [[reality]].
+
+==Translations==
 *[[Dutch]]: [[vastgoed]] ''n'', [[immobiliën]] ''m, pl''
 *[[Finnish]]: [[kiinteistö]]
