Same editor as immediately previous, added more detailed etymology <real estate#34191>

--- a/wiki/real_estate.wikitext
+++ b/wiki/real_estate.wikitext
@@ -9,10 +9,10 @@
 
 '''estate'''; (please insert etymology here)
 
-====Origin====
-Under the [[feudalism|feudal]] system, introduced to [http://en.wikipedia.org/wiki/England England] by the [http://en.wikipedia.org/wiki/Normandy Normans] in the [http://en.wikipedia.org/wiki/11th_century 11th century], all land [[Grant|grants]] originated with the [[king]]. The term '''real estate''', evolved from the [http://en.wikipedia.org/wiki/French_language French] '''royal'''.
+Under the [[feudalism|feudal]] system, introduced to [http://en.wikipedia.org/wiki/England England] by the [http://en.wikipedia.org/wiki/Normandy Normans] in the [http://en.wikipedia.org/wiki/11th_century 11th century], all land [[Grant|grants]] originated with the [[king]]. The term '''real estate''', evolved from the [http://en.wikipedia.org/wiki/French_language French] '''royal'''. 
 
-'''Real estate''' does not, etymologically, have anything to do with [[reality]].
+In spite of the name, '''real estate''' has no connection with the concept of [[reality]]. It derives instead from the [[feudalism|feudal]] principle that in a [[monarchy]], all land was considered the property of the king. Thus originally the term '''real estate''' was equivalent to "royal estate", ''real'' originating from the French ''royale'', as it was the French-speaking Normans who introduced feudalism to England and thus the [http://en.wikipedia.org/wiki/English_language English] language; [[cognate]] to [http://en.wikipedia.org/wiki/Spanish_language Spanish] ''real''.
+
 
 ==Translations==
 *[[Dutch]]: [[vastgoed]] ''n'', [[immobiliën]] ''m, pl''
