--- a/wiki/%E7%BA%BF.wikitext
+++ b/wiki/%E7%BA%BF.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#line, thread, wire
-*# clue
+*# [[line]], [[thread]], [[wire]]
+*# [[clue]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,6 +33,30 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[綫]], [[線]]
+
+===Compounds===
+*[[线板]], [[线板儿]]
+*[[线材]]
+*[[线春]]
+*[[线段]]
+*[[线规]]
+*[[线画]]
+*[[线脚]]
+*[[线路]]
+*[[线麻]]
+*[[线呢]]
+*[[线圈]]
+*[[线绳]]
+*[[线速度]]
+*[[线索]]
+*[[线毯]]
+*[[线条]]
+*[[线头]], [[线头儿]]
+*[[线香]]
+*[[线形]]
+*[[线衣]]
+*[[线轴儿]]
+*[[线装]]
 
 * '''Other info''': 
 
