--- a/wiki/%E8%BF%85.wikitext
+++ b/wiki/%E8%BF%85.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': quick, hasty, rapid, sudden
+* '''Common Meaning''': [[quick]], [[hasty]], [[rapid]], [[sudden]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -26,11 +26,20 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': seun3
 
+===Compounds===
+*[[迅即]]
+*[[迅急]]
+*[[迅疾]]
+*[[迅捷]]
+*[[迅雷不及掩耳]]
+*[[迅猛]]
+*[[迅速]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[じん]] (jin), [[しん]] (shin), [[しゅん]] (shun)
