--- a/wiki/concordance.wikitext
+++ b/wiki/concordance.wikitext
@@ -1,7 +1,10 @@
 ==English==
 ===Etymology===
 French, from Late Latin ''[[concordantia]]''
+
 ===Noun===
+'''concordance''' ([[concordances]])
+
 #[[Agreement]]; [[accordance]]
 #:Contrasts, and yet '''concordances'''. - [[Thomas Carlyle]]
 #''(Grammar, Obsolete):'' Concord; agreement. - [[Roger Ascham]]
