--- a/wiki/%E8%99%9A.wikitext
+++ b/wiki/%E8%99%9A.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': false
+* '''Common Meaning''': [[false]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -31,11 +31,68 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[虛]]
 
+===Compounds===
+*[[虚报]]
+*[[虚词]]
+*[[虚辞]]
+*[[虚度]]
+*[[虚浮]]
+*[[虚构]]
+*[[虚汗]]
+*[[虚耗]]
+*[[虚华]]
+*[[虚话]]
+*[[虚怀若谷]]
+*[[虚幻]]
+*[[虚火]]
+*[[虚假]]
+*[[虚价]]
+*[[虚骄]]
+*[[虚惊]]
+*[[虚空]]
+*[[虚夸]]
+*[[虚礼]]
+*[[虚名]]
+*[[虚拟]]
+*[[虚胖]]
+*[[虚飘飘]], [[虚飘飘的]]
+*[[虚情假意]]
+*[[虚荣]]
+*[[虚弱]]
+*[[虚设]]
+*[[虚实]]
+*[[虚数]]
+*[[虚岁]]
+*[[虚套子]]
+*[[虚脱]]
+*[[虚妄]]
+*[[虚伪]]
+*[[虚位以待]]
+*[[虚文]]
+*[[虚无]]
+*[[虚无飘渺]]
+*[[虚无主义]]
+*[[虚席以待]]
+*[[虚线]]
+*[[虚像]]
+*[[虚心]]
+*[[虚言]]
+*[[虚掩]]
+*[[虚应故事]]
+*[[虚有其表]]
+*[[虚与委蛇]]
+*[[虚造]]
+*[[虚张声势]]
+*[[虚职]]
+*[[虚掷]]
+*[[虚字]]
+*[[虚左以待]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[きょ]] (kyo), [[こ]] (ko)
