Pronunciation, Standardizing Hebrew letters <nun#41108>

--- a/wiki/nun.wikitext
+++ b/wiki/nun.wikitext
@@ -1,7 +1,13 @@
 ==English==
 
+===Pronunciation===
+* [[w:IPA|IPA]]: nʌn
+* [[w:SAMPA|SAMPA]]: nVn
+* [[w:AHD|AHD]]: nŭn
+
 ===Noun===
-#a member of a community of women who live under certain vows
+
+# a member of a community of women who live under certain vows
 
 ====Related terms====
 *[[nunnery]]
@@ -21,3 +27,17 @@
 ===See also===
 *[[monk]]
 *[[sister]]
+
+===Pronunciation===
+* [[w:IPA|IPA]]: nʊn
+* [[w:SAMPA|SAMPA]]: nUn
+* [[w:AHD|AHD]]: nŏŏn
+----
+* Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1503; &#1504;
+** Last: [[Mem|&#1502;]]
+** Next: [[Samekh|&#1505;]]
+
+===Noun===
+'''nun'''
+
+# The fourteenth letter of the Hebrew alphabet.
