pron to rightful place; rightful fmt would be nice too <cwm#19015>

--- a/wiki/cwm.wikitext
+++ b/wiki/cwm.wikitext
@@ -1,9 +1,12 @@
 ==English==
+===Pronunciation===
+"coom"
+
 ===Etymology===
 Welsh
 
 ===Noun===
-'''cwm''' (''plural'' '''cwms''')  Pronounced "Coom"
+'''cwm''' (''plural'' '''cwms''')
 
 #A steep, [[bowl]]-shaped [[hollow]] in a [[hill]] or [[mountain]].
 
