Standardizing Hebrew letters <pe#33405>

--- a/wiki/PE.wikitext
+++ b/wiki/PE.wikitext
@@ -1,12 +1,21 @@
 ==English==
-===Abbreviation===
-#[[Prince Edward Island]] (Canadian province)
-#[[physical education]]
-----
-==Italian==
-===Abbreviation===
-# [[Pescara]] (A city in Abruzzo)
-----
-==Portuguese==
-===Abbreviation===
-#[[Pernambuco]] (Brazilian state)
+
+* Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1507; &#1508;
+** Last: [[Samekh|&#1506;]]
+** Next: [[Sadhe|&#1510;]]
+
+===Noun===
+
+'''pe'''
+
+# The eightteenth letter of the Hebrew alphabet.
+
+==Tok Pisin==
+
+===Etymology===
+: English ''[[pay]]''
+
+===Noun===
+
+# Payment.
+# Salary.
