--- a/wiki/%E6%84%B4.wikitext
+++ b/wiki/%E6%84%B4.wikitext
@@ -10,7 +10,7 @@
 
 * '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 心人戈口 (POIR)
 
-* '''Graphical Significance and Origin''': 
+* '''Graphical Significance and Origin''': 形声。从心,仓声。本义:悲伤
 
 * '''Common Meaning''': sad, broken-hearted, disconsolate
 
