--- a/wiki/waw.wikitext
+++ b/wiki/waw.wikitext
@@ -1,1 +1,15 @@
-#REDIRECT [[vav]]
+==English==
+
+* Letter of the Arabic alphabet: و
+** Last: [[ه]]
+** Next: [[ى]]
+
+===Noun===
+
+'''waw'''
+
+# The twenty-seventh letter of the Arabic alphabet.
+
+===See also===
+*[[و]]
+*[[vav]]
