--- a/wiki/random.wikitext
+++ b/wiki/random.wikitext
@@ -32,6 +32,8 @@
 *[[Spanish]]: [[aleatorio]]
 *Swedish: [[slumpvis]] (1,4), [[slumpmässig]] (1,4)
 
+im am sitting near a girl with hairy nipples
+
 ===Noun===
 
 # (''colloquial, probably US only'') A completely undistinguished person.
