--- a/wiki/random.wikitext
+++ b/wiki/random.wikitext
@@ -34,6 +34,8 @@
 
 im am sitting near a girl with hairy nipples
 
+My bellend is infected and currently on fire, can sum1 help me please
+
 ===Noun===
 
 # (''colloquial, probably US only'') A completely undistinguished person.
