/* Proper Noun */ <Gimel#65350>

--- a/wiki/Gimel.wikitext
+++ b/wiki/Gimel.wikitext
@@ -10,10 +10,10 @@
 
 # The third letter of the Hebrew alphabet.
 
-===Proper Noun===
+===Proper noun===
 '''Gimel'''
 
-# Swiss comune
+#A Swiss comune.
 
 ===See also===
 *[[w:Gimel]]
