--- a/wiki/waw.wikitext
+++ b/wiki/waw.wikitext
@@ -5,11 +5,10 @@
 ** Next: [[ى]]
 
 ===Noun===
-
 '''waw'''
 
 # The twenty-seventh letter of the Arabic alphabet.
+#A variant spelling of '''[[vav]]'''.
 
 ===See also===
 *[[و]]
-*[[vav]]
